<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ladzone.fimp.assigment2.AddPatient">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_name"
        android:id="@+id/FN"
        android:textColor="@color/text"
        android:gravity="fill_vertical"
        android:textSize="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/first_name"
        android:hint="@string/enter_first_name"
        android:background="@android:color/transparent"
        android:textColor="@color/MainText" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_name"
        android:id="@+id/textView3"
        android:textColor="@color/text"
        android:gravity="fill_vertical"
        android:textSize="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/last_name"
        android:hint="@string/enter_last_name"
        android:background="@android:color/transparent"
        android:textColor="@color/MainText" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_department"
        android:id="@+id/textView6"
        android:textColor="@color/text"
        android:gravity="fill_vertical"
        android:textSize="16dp" />



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/spinner2"
        android:entries="@array/department"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="New Button"
            android:id="@+id/AddPatient"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@color/fabplush" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView3"
            android:layout_gravity="left|top" />
    </FrameLayout>

</LinearLayout>
